--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "seed": "ts-node -r tsconfig-paths/register src/seeds/seed.ts",
-    "create-admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin.ts"
+    "create-admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin.ts",
+    "clear-schools": "ts-node -r tsconfig-paths/register src/scripts/clear-schools.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -30,9 +31,11 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
